--- a/petstagram/templates/common/home-page.html
+++ b/petstagram/templates/common/home-page.html
@@ -1,5 +1,6 @@
 {% extends 'common/base.html' %}
 {% load static %}
+{% load url_query_append %}
 <!-- Starts Main Section -->
 
 {% block content %}
@@ -19,6 +20,38 @@
             {% for photo in all_photos %}
                 {% include "common/pet-post.html" %}
             {% endfor %}
+        
+            <div class="pagination">
+                <span class="current">
+                        Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+                </span>
+            
+                <span class="step-links-buttons">
+                
+                    <!-- If there are previous and next photos -->
+                    {% if page_obj.has_previous and page_obj.has_next %}
+                        <a href="?{% url_query_append 'page' page_obj.previous_page_number %}">
+                            <i class="fa-solid fa-arrow-left"></i>
+                        </a>
+                        <a href="?{% url_query_append 'page' page_obj.next_page_number %}">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                        
+                    <!-- If there are only previous photos -->
+                    {% elif page_obj.has_previous %}
+                        <a href="?{% url_query_append 'page' page_obj.previous_page_number %}">
+                            <i class="fa-solid fa-arrow-left"></i>
+                        </a>
+
+                    <!-- If there are only next photos -->
+                    {% elif page_obj.has_next %}
+                        <a href="?{% url_query_append 'page' page_obj.next_page_number %}">
+                            <i class="fa-solid fa-arrow-right"></i>
+                        </a>
+                    {% endif %}
+                </span>
+            </div>
+
         </div>
     </div>
 </main>
